Delete transaction API & Transaction swagger yaml update:
